--- a/app/views/prototypes/back-vacancies/answers-provider.html
+++ b/app/views/prototypes/back-vacancies/answers-provider.html
@@ -70,10 +70,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Management
+              Managers
             </dt>
             <dd class="govuk-summary-list__value">
-              10
+              1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -84,7 +84,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teacher
+              Teachers
             </dt>
             <dd class="govuk-summary-list__value">
               12
@@ -98,10 +98,24 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Unable to fill
+              Teaching support
             </dt>
             <dd class="govuk-summary-list__value">
-           2
+              2
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            Not filled manager
+            </dt>
+            <dd class="govuk-summary-list__value">
+           1 
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -113,10 +127,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             How long to fill
+              Not filled teacher
             </dt>
             <dd class="govuk-summary-list__value">
-          2 to 3 months
+          2 
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -132,7 +146,7 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Unable to fill
+              Not filled support
             </dt>
             <dd class="govuk-summary-list__value">
               2
@@ -146,7 +160,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How long to fill
+              Time to fill manager
             </dt>
             <dd class="govuk-summary-list__value">
               2 to 3 months
@@ -160,7 +174,35 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How difficult
+              Time to fill teacher
+            </dt>
+            <dd class="govuk-summary-list__value">
+              2 to 3 months
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Time to fill support
+            </dt>
+            <dd class="govuk-summary-list__value">
+              2 to 3 months
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult to fill manager
             </dt>
             <dd class="govuk-summary-list__value">
               Easy
@@ -174,7 +216,35 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Vocational
+              Difficult to fill teacher
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Easy
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult to fill support
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Easy
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Vocational subjects
             </dt>
             <dd class="govuk-summary-list__value">
               Business and Administrative,
@@ -189,7 +259,7 @@ Construction
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-            Academic
+            Academic subjects
             </dt>
             <dd class="govuk-summary-list__value">
               None
@@ -230,33 +300,7 @@ Construction
             </dd>
           </div>
 
-          <!--<div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Vocational
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Construction
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Other
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Life skills
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>-->
+          
 
 
         </dl>
