--- a/app/views/prototypes/back-vacancies/how-long.html
+++ b/app/views/prototypes/back-vacancies/how-long.html
@@ -42,9 +42,6 @@
    
     <h2 class="govuk-heading-m">Managers</h2>
     
-    
-
-  
 
       <div class="govuk-radios">
         
@@ -71,17 +68,25 @@
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
           </label>
-
           
-  
-          
-      </div><br><br>
+      </div>
+       
+  </div>
+</fieldset>
+</div><br>
 
-      <h2 class="govuk-heading-m">Teachers</h2>
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      
+    </legend><br>
 
-  
+   
+    <h2 class="govuk-heading-m">Teachers</h2>
+    
 
       <div class="govuk-radios">
+        
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
@@ -104,23 +109,28 @@
           <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
-          </label><br>
-
+          </label>
           
-
-      
-
-    
+      </div>
+       
   </div>
-  </div><br><br>
 
-  <br>
 
-  <h2 class="govuk-heading-m">Teaching support</h2>
+</fieldset>
+</div><br>
 
-  
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      
+    </legend><br>
+
+   
+    <h2 class="govuk-heading-m">Teaching support</h2>
+    
 
       <div class="govuk-radios">
+        
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
@@ -143,18 +153,12 @@
           <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
-          </label><br>
-
+          </label>
           
-
-      
-
-    
-  </div>
+      </div>
+       
   </div>
 
-  </div>
- 
 
 </fieldset>
 </div><br>
