--- a/app/views/prototypes/back-vacancies/many-vacancies-filled.html
+++ b/app/views/prototypes/back-vacancies/many-vacancies-filled.html
@@ -35,25 +35,25 @@
       <h1 class="govuk-fieldset__heading">
         How many vacancies were you unable to fill?
       </h1>
-    </legend><br>
+    </legend><br><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Managers
+        <h2 class="govuk-heading-m">Managers</h2>
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Teachers
+        <h2 class="govuk-heading-m">Teachers</h2>
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Teaching support
+        <h2 class="govuk-heading-m">Teaching support</h2>
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
