--- a/app/views/prototypes/back-vacancies/many-vacancies.html
+++ b/app/views/prototypes/back-vacancies/many-vacancies.html
@@ -35,24 +35,26 @@
       <h1 class="govuk-fieldset__heading">
         How many vacancies did you have in the last academic year?
       </h1>
-    </legend><br>
+    </legend><br><br>
     <div class="govuk-form-group">
+      <h2 class="govuk-heading-m">Managers</h2>
       <label class="govuk-label" for="width-10">
-        Managers
+        Senior or middle manager, principal, vice-principal, CEO
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Teachers
+        <h2 class="govuk-heading-m">Teachers</h2>Anyone who teaches or trains as the main part of their job
+
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Teaching support
+        <h2 class="govuk-heading-m">Teaching support</h2>Teaching assistant, mentor, assessor
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
