--- a/app/views/prototypes/back-vacancies/answers-provider.html
+++ b/app/views/prototypes/back-vacancies/answers-provider.html
@@ -244,7 +244,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Vocational subjects
+            Difficult subjects
             </dt>
             <dd class="govuk-summary-list__value">
               Business and Administrative,
@@ -257,19 +257,7 @@ Construction
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            Academic subjects
-            </dt>
-            <dd class="govuk-summary-list__value">
-              None
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
+          
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
