--- a/app/views/prototypes/back-vacancies/filled.html
+++ b/app/views/prototypes/back-vacancies/filled.html
@@ -193,7 +193,7 @@
 </div><br>
 
 
-          <a href="vacancies-vocational" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
