--- a/app/views/prototypes/small-itp/vacancies-together.html
+++ b/app/views/prototypes/small-itp/vacancies-together.html
@@ -39,7 +39,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which subjects were difficult to find teachers for?
+        Which subjects were difficult to find staff for?
       </h1>
     </legend><br>
 
@@ -438,7 +438,7 @@
 
 
 
-          <a href="explain" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
