--- a/app/views/prototypes/back-vacancies/how-long.html
+++ b/app/views/prototypes/back-vacancies/how-long.html
@@ -46,25 +46,25 @@
       <div class="govuk-radios">
         
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="managers" name="less" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
             Less than one month
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="managers-2" name="2" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
             2 to 3 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="managers-3" name="4" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
             4 to 5 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="managers-4" name="6" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
           </label>
@@ -77,9 +77,7 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      
-    </legend><br>
+    
 
    
     <h2 class="govuk-heading-m">Teachers</h2>
@@ -88,25 +86,25 @@
       <div class="govuk-radios">
         
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
             Less than one month
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="teachers-2" name="teachers-2" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
             2 to 3 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="teachers-3" name="teachers-3" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
             4 to 5 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="teachers-4" name="teachers-4" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
           </label>
@@ -121,9 +119,7 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      
-    </legend><br>
+    
 
    
     <h2 class="govuk-heading-m">Teaching support</h2>
@@ -132,25 +128,25 @@
       <div class="govuk-radios">
         
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="support" name="support" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
             Less than one month
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="support-2" name="support-2" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
             2 to 3 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="support-3" name="support-3" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
             4 to 5 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
+          <input class="govuk-radios__input" id="support-4" name="support-4" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
           </label>
