--- a/app/views/prototypes/back-vacancies/filled.html
+++ b/app/views/prototypes/back-vacancies/filled.html
@@ -41,32 +41,30 @@
 
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          
-        </legend>
+        
         <h2 class="govuk-heading-m">Managers</h2>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+            <input class="govuk-radios__input" id="man" name="man" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="man">
               Very easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            <input class="govuk-radios__input" id="man-2" name="man" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="man-2">
               Easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="man-3" name="man" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="man-3">
               Neither easy or difficult
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+            <input class="govuk-radios__input" id="man-4" name="man" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="man-4">
               Difficult
             </label>
     
@@ -74,8 +72,8 @@
         </div>
     
         <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="man-5" name="man" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="man-5">
               Very difficult
             </label>
           </div><br>
@@ -88,38 +86,34 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      
-    </legend>
+    
 
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          
-        </legend>
+        
         <h2 class="govuk-heading-m">Teachers</h2>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+            <input class="govuk-radios__input" id="teach" name="teach" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="teach">
               Very easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            <input class="govuk-radios__input" id="teach-2" name="teach" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="teach-2">
               Easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="teach-3" name="teach" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="teach-3">
               Neither easy or difficult
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+            <input class="govuk-radios__input" id="teach-4" name="teach" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="teach-4">
               Difficult
             </label>
     
@@ -127,8 +121,8 @@
         </div>
     
         <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="teach-5" name="teach" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="teach-5">
               Very difficult
             </label>
           </div>
@@ -141,38 +135,34 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      
-    </legend>
+    
 
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          
-        </legend>
+        
         <h2 class="govuk-heading-m">Teaching support</h2>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+            <input class="govuk-radios__input" id="supp" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp">
               Very easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            <input class="govuk-radios__input" id="supp-2" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-2">
               Easy
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="supp-3" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-3">
               Neither easy or difficult
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+            <input class="govuk-radios__input" id="supp-4" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-4">
               Difficult
             </label>
     
@@ -180,8 +170,8 @@
         </div>
     
         <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            <input class="govuk-radios__input" id="supp-5" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-5">
               Very difficult
             </label>
           </div>
