--- a/app/views/index.html
+++ b/app/views/index.html
@@ -136,6 +136,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Vacancies order change</h2>
+
+      <p>Questions <a href="/prototypes/vacancy-change/details">Start</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
