--- a/app/views/prototypes/vacancy-change/apprentices.html
+++ b/app/views/prototypes/vacancy-change/apprentices.html
@@ -46,7 +46,7 @@
   </ul>
 </div><br>
 
-          <a href="many-vacancies" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
