--- a/app/views/prototypes/vacancy-change/how-long-copy.html
+++ b/app/views/prototypes/vacancy-change/how-long-copy.html
@@ -35,12 +35,12 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long on average did it take to fill the vacancies?
+        How long did it take to fill the vacancies?
       </h1>
-    </legend><br>
+    </legend><br><br>
 
    
-    <h2 class="govuk-heading-m">Managers</h2>
+    <h2 class="govuk-heading-m">Business and Administrative</h2>
     
 
     <div class="govuk-form-group">
@@ -86,14 +86,8 @@
           </legend><br>
       
          
-          <h2 class="govuk-heading-m">Teachers</h2>
-          
-      
-          <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                
-              </legend>
+          <h2 class="govuk-heading-m">Construction</h2>
+        
               <div class="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
@@ -121,59 +115,31 @@
                 </div>
               </div>
           
-            </fieldset>
-          </div>
-             <br><br>
-
-             <h2 class="govuk-heading-m">Teaching support</h2>
-          
-      
-          <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                
-              </legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="support" name="support" type="radio" value="short">
-                  <label class="govuk-label govuk-radios__label" for="support">
-                    Less than one month
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="support-2" name="support" type="radio" value="two">
-                  <label class="govuk-label govuk-radios__label" for="support-2">
-                    2 to 3 months
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="support-3" name="support" type="radio" value="five">
-                  <label class="govuk-label govuk-radios__label" for="support-3">
-                    4 to 5 months
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="support-4" name="support" type="radio" value="six">
-                  <label class="govuk-label govuk-radios__label" for="support-4">
-                    Over 6 months
-                  </label>
-                </div>
-              </div>
-          
-            </fieldset>
-          </div>
-             <br><br>
+           
+             <br><br><br>
 
 
 
-          <a href="filled" class="govuk-button show-continue" style="display: inline;">
+
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
+
+</fieldset>
+</div>
+
+</div>
+
+
+          
        
- </div>
 </div>
 </div>
-  </div>
+</div>
+</div>
+
+
+  
         
 
 
