--- a/app/views/prototypes/vacancy-change/confirmation-provider.html
+++ b/app/views/prototypes/vacancy-change/confirmation-provider.html
@@ -43,18 +43,24 @@
 </h1>
 
             
-<h2 class="govuk-heading-s">
-  What happens next</h2>
+<h2 class="govuk-heading-m">
+  What happens next?</h2>
 
+  <h2 class="govuk-heading-m">You need to:</h2>
 
+  <h3 class="govuk-heading-m govuk-!-margin-bottom-1">
+    <a href="mis" class="govuk-link govuk-link--no-visited-state">
+      Tell us about your staff members
+    </a>
+  </h3>
 
-<p>You need to
-  <a href="mis" class="govuk-link">tell us about your staff members</a></p>
+  
        
       </div>
     </div>
   </main>
 </div>
+
 
 
 {% endblock %}
